2018-xx-xx - 2.3.0
-------------------------------
- Refactored "Services" screan and use WP_List_Table class for the list.
- Refactored "Service Providers" screan and use WP_List_Table class for the list.
- Improved "Working Hours" and "Exceptions" tabs content on mobile devices.

2018-xx-xx - 2.2.8
-------------------------------
- Fixed a problem with an appointment create time, it showed "Unknown" for Time Formats: "g:i a" and "g:i A".
- Fixed a problem with an appointment date when we add an appointment on admin area.
- Fixed a problem with autoconfirmation free appointment.
- Fixed a problem with bottom bulk action on "Add-ons" tab.
- Fixed a problem with double cancellation emails.
- Fixed a problem with paddings on the weekly booking calendar.
- Improved the "app_my_appointments" shortcode and added a message when we have no appointments.
- Removed DateTime::createFromFormat() usage to be compatible with PHP 5.2
- Fixed a problem with visibility "Currency" option - it was visible only when we turn on "Payment required" field.
- Fixed incorrectly used `is_a()` function. Props for tw77.

2018-05-07 - 2.2.7
-------------------------------
- Added check for service name it can be empty.
- Changed default appointments sorting to "Appointment Date".
- Fixed an export problem for additional fields with HTML entities in a name.
- Fixed an export problem for the date range.
- Fixed an integration problem with MarketPress plugin.
- Fixed a problem with booking, when the site is on HTTP but admin force HTTPS usage.

2018-04-24 - 2.2.6
-------------------------------
- Added ability to delete "Service".
- Added ability to delete "Service Provider".
- Added asterisk to required fields label on appointment form.
- Fixed a problem with appointments details, the start hour of appointment is now depended on settings.
- Fixed a problem with Appointments settings on the BuddyPress profile.
- Fixed a problem with BuddyPress profile integration.