@@ -1,2 +1,2 @@
-!function(e){function t(i){if(n[i])return n[i].exports;var o=n[i]={i:i,l:!1,exports:{}};return e[i].call(o.exports,o,o.exports,t),o.l=!0,o.exports}var n={};t.m=e,t.c=n,t.i=function(e){return e},t.d=function(e,n,i){t.o(e,n)||Object.defineProperty(e,n,{configurable:!1,enumerable:!0,get:i})},t.n=function(e){var n=e&&e.__esModule?function(){return e.default}:function(){return e};return t.d(n,"a",n),n},t.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},t.p="",t(t.s=2)}([function(e,t){jQuery(document).ready(function(e){function t(e){n[e]&&(n[i]&&(n[i].$el.removeClass("current"),n[i].$section.removeClass("current")),n[e].$el.addClass("current"),n[e].$section.addClass("current"),i=e)}var n=[],i="",o=0;if(e("ul.subsubsub a").each(function(){o++;var i=e(this),s=i.data("section");n[s]={$el:i,$section:e("#app-settings-"+s)},i.click(function(e){t(s)})}),o){var s=window.location.hash;s=s?s.substr(1):Object.keys(n)[0],t(s)}e(".wp-list-table.services a.edit").on("click",function(){var i=e(this).closest("tr"),o=e("#app-settings-section-edit-service"),s=e(this).data("id");n["section-edit-service"]={$el:e(this),$section:o},page=e(".column-page span",i).data("id"),"undefined"==typeof page&&(page=0),e("#service-id",o).val(s),e("#service-name",o).val(e(".column-name strong a",i).html()),e("#service-capacity",o).val(e(".column-capacity",i).html()),e("#service-duration",o).val(e(".column-duration",i).html()),e("#service-page",o).val(page),e("#service-price",o).val(e(".column-price",i).html()),t("section-edit-service")}),e(".wp-list-table.workers a.edit").on("click",function(){var i=e(this).closest("tr"),o=e("#app-settings-section-edit-worker"),s=e(this).data("id");n["section-edit-worker"]={$el:e(this),$section:o},page=e(".column-page span",i).data("id"),"undefined"==typeof page&&(page=0),e("#worker-user option[value="+s+"]",o).prop("selected",!0),e("#worker-dummy",o).prop("checked",1===e(".column-dummy span",i).data("state")),e("#worker-page",o).val(page),e("#worker-price",o).val(e(".column-price",i).html()),e("input[name=multiselect_services_provided]",o).prop("checked",!1),e("#services_provided option",o).prop("selected",!1),value=e(".column-services_provided ul",i).data("services").toString(),value=value.split(","),e.each(value,function(t,n){e('#services_provided option[value="'+n+'"]',o).prop("selected",!0)}),e(".add_worker_multiple").multiselect("refresh"),t("section-edit-worker")})})},function(e,t){jQuery(document).ready(function(e){function t(){"yes"==p.val()?l.show():l.hide()}function n(t,n){e.post(ajaxurl,t,function(t){t.success&&n.detach();var i='<div class="notice notice-'+(t.success?"success":"error")+' is-dismissible"><p>'+t.data.message+"</p></div>";e(".appointments-settings h1").after(i)})}var i,o,s,a=e(".custom_color_row"),c=e(".preset_samples");e('select[name="color_set"]').change(function(){var t=e(this).val();if(0==t)a.show(),c.hide();else{a.hide(),c.show();for(s in app_i10n.classes)if(app_i10n.classes.hasOwnProperty(s)){for(i=[],o=1;o<=3;o++)i[o]=app_i10n.presets[s][o];c.find("a."+s).css("background-color","#"+i[t])}}});var r=e(".colorpicker_input");r.each(function(){var t=this.id;e("#"+t).ColorPicker({onSubmit:function(t,n,i,o){e(o).val(n),e(o).ColorPickerHide()},onBeforeShow:function(){e(this).ColorPickerSetColor(this.value)},onChange:function(n,i,o){var s=e("#"+t);s.val(i),s.parent().find("a.pickcolor").css("background-color","#"+i)}}).bind("keyup",function(){e(this).ColorPickerSetColor(this.value)})}),r.keyup(function(){var t=e(this).val();t=t.replace(/[^a-fA-F0-9]/,""),3!==t.length&&6!==t.length||e(this).parent().find("a.pickcolor").css("background-color","#"+t)});var l=e(".api_detail"),p=e('select[name="login_required"]');t(),p.change(function(){t()}),e('select[name="payment_required"]').change(function(){"yes"==e('select[name="payment_required"]').val()?e(".payment_row").show():e(".payment_row").hide()}),e("#app-settings-section-new-worker form.add-new-service-provider").on("submit",function(){var t=e(this);if(null==e("#services_provided",t).val())return alert(app_i10n.messages.select_service_provider),!1}),e(".appointment-create-page a.button").on("click",function(){var t=e("select",e(this).closest("td")).val(),n={action:"make_an_appointment_page",_wpnonce:e(this).data("nonce"),app_page_type:t};return e.post(ajaxurl,n,function(t){var n='<div class="notice '+(t.success?"updated":"error")+'"><p>'+t.data.message+"</p></div>";e(".appointments-settings h1").after(n)}),!1}),e(document).on("click",".wp-list-table.services .delete a",function(){if(window.confirm(app_i10n.messages.service.delete_confirmation)){var t=e(this).closest("tr");n({action:"delete_service",nonce:e(this).data("nonce"),id:e(this).data("id")},t)}}),e(document).on("click","#app-settings-section-services input.action",function(){var t=(e(this).closest("form"),e(".check-column input:checked")),n=e("select",e(this).parent()).val();return 0===t.length?(window.alert(app_i10n.messages.bulk_actions.no_items),!1):"-1"===n?(window.alert(app_i10n.messages.bulk_actions.no_action),!1):!!window.confirm(app_i10n.messages.services.delete_confirmation)&&void 0}),e(document).on("click",".wp-list-table.workers .delete a",function(){if(window.confirm(app_i10n.messages.workers.delete_confirmation)){var t=e(this).closest("tr");n({action:"delete_worker",nonce:e(this).data("nonce"),id:e(this).data("id")},t)}}),e(document).on("click","#app-settings-section-workers input.action",function(){var t=(e(this).closest("form"),e(".check-column input:checked")),n=e("select",e(this).parent()).val();return 0===t.length?(window.alert(app_i10n.messages.bulk_actions.no_items),!1):"-1"===n?(window.alert(app_i10n.messages.bulk_actions.no_action),!1):!!window.confirm(app_i10n.messages.workers.delete_confirmation)&&void 0})})},function(e,t,n){n(0),e.exports=n(1)}]);
+!function(e){function t(i){if(n[i])return n[i].exports;var o=n[i]={i:i,l:!1,exports:{}};return e[i].call(o.exports,o,o.exports,t),o.l=!0,o.exports}var n={};t.m=e,t.c=n,t.i=function(e){return e},t.d=function(e,n,i){t.o(e,n)||Object.defineProperty(e,n,{configurable:!1,enumerable:!0,get:i})},t.n=function(e){var n=e&&e.__esModule?function(){return e.default}:function(){return e};return t.d(n,"a",n),n},t.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},t.p="",t(t.s=2)}([function(e,t){jQuery(document).ready(function(e){function t(e){n[e]&&(n[i]&&(n[i].$el.removeClass("current"),n[i].$section.removeClass("current")),n[e].$el.addClass("current"),n[e].$section.addClass("current"),i=e)}var n=[],i="",o=0;if(e("ul.subsubsub a").each(function(){o++;var i=e(this),s=i.data("section");n[s]={$el:i,$section:e("#app-settings-"+s)},i.click(function(e){t(s)})}),o){var s=window.location.hash;s=s?s.substr(1):Object.keys(n)[0],t(s)}e(".wp-list-table.services a.edit").on("click",function(){var i=e(this).closest("tr"),o=e("#app-settings-section-edit-service"),s=e(this).data("id");n["section-edit-service"]={$el:e(this),$section:o},page=e(".column-page span",i).data("id"),"undefined"==typeof page&&(page=0),e("#service-id",o).val(s),e("#service-name",o).val(e(".column-name strong a",i).html()),e("#service-capacity",o).val(e(".column-capacity",i).html()),e("#service-duration",o).val(e(".column-duration span",i).data("duration")),e("#service-page",o).val(page),e("#service-price",o).val(e(".column-price",i).html()),t("section-edit-service")}),e(".wp-list-table.workers a.edit").on("click",function(){var i=e(this).closest("tr"),o=e("#app-settings-section-edit-worker"),s=e(this).data("id");n["section-edit-worker"]={$el:e(this),$section:o},page=e(".column-page span",i).data("id"),"undefined"==typeof page&&(page=0),e("#worker-user option[value="+s+"]",o).prop("selected",!0),e("#worker-dummy",o).prop("checked",1===e(".column-dummy span",i).data("state")),e("#worker-page",o).val(page),e("#worker-price",o).val(e(".column-price",i).html()),e("input[name=multiselect_services_provided]",o).prop("checked",!1),e("#services_provided option",o).prop("selected",!1),value=e(".column-services_provided ul",i).data("services").toString(),value=value.split(","),e.each(value,function(t,n){e('#services_provided option[value="'+n+'"]',o).prop("selected",!0)}),e(".add_worker_multiple").multiselect("refresh"),t("section-edit-worker")})})},function(e,t){jQuery(document).ready(function(e){function t(){"yes"==p.val()?l.show():l.hide()}function n(t,n){e.post(ajaxurl,t,function(t){t.success&&n.detach();var i='<div class="notice notice-'+(t.success?"success":"error")+' is-dismissible"><p>'+t.data.message+"</p></div>";e(".appointments-settings h1").after(i)})}var i,o,s,a=e(".custom_color_row"),c=e(".preset_samples");e('select[name="color_set"]').change(function(){var t=e(this).val();if(0==t)a.show(),c.hide();else{a.hide(),c.show();for(s in app_i10n.classes)if(app_i10n.classes.hasOwnProperty(s)){for(i=[],o=1;o<=3;o++)i[o]=app_i10n.presets[s][o];c.find("a."+s).css("background-color","#"+i[t])}}});var r=e(".colorpicker_input");r.each(function(){var t=this.id;e("#"+t).ColorPicker({onSubmit:function(t,n,i,o){e(o).val(n),e(o).ColorPickerHide()},onBeforeShow:function(){e(this).ColorPickerSetColor(this.value)},onChange:function(n,i,o){var s=e("#"+t);s.val(i),s.parent().find("a.pickcolor").css("background-color","#"+i)}}).bind("keyup",function(){e(this).ColorPickerSetColor(this.value)})}),r.keyup(function(){var t=e(this).val();t=t.replace(/[^a-fA-F0-9]/,""),3!==t.length&&6!==t.length||e(this).parent().find("a.pickcolor").css("background-color","#"+t)});var l=e(".api_detail"),p=e('select[name="login_required"]');t(),p.change(function(){t()}),e('select[name="payment_required"]').change(function(){"yes"==e('select[name="payment_required"]').val()?e(".payment_row").show():e(".payment_row").hide()}),e("#app-settings-section-new-worker form.add-new-service-provider").on("submit",function(){var t=e(this);if(null==e("#services_provided",t).val())return alert(app_i10n.messages.select_service_provider),!1}),e(".appointment-create-page a.button").on("click",function(){var t=e("select",e(this).closest("td")).val(),n={action:"make_an_appointment_page",_wpnonce:e(this).data("nonce"),app_page_type:t};return e.post(ajaxurl,n,function(t){var n='<div class="notice '+(t.success?"updated":"error")+'"><p>'+t.data.message+"</p></div>";e(".appointments-settings h1").after(n)}),!1}),e(document).on("click",".wp-list-table.services .delete a",function(){if(window.confirm(app_i10n.messages.service.delete_confirmation)){var t=e(this).closest("tr");n({action:"delete_service",nonce:e(this).data("nonce"),id:e(this).data("id")},t)}}),e(document).on("click","#app-settings-section-services input.action",function(){var t=(e(this).closest("form"),e(".check-column input:checked")),n=e("select",e(this).parent()).val();return 0===t.length?(window.alert(app_i10n.messages.bulk_actions.no_items),!1):"-1"===n?(window.alert(app_i10n.messages.bulk_actions.no_action),!1):!!window.confirm(app_i10n.messages.services.delete_confirmation)&&void 0}),e(document).on("click",".wp-list-table.workers .delete a",function(){if(window.confirm(app_i10n.messages.workers.delete_confirmation)){var t=e(this).closest("tr");n({action:"delete_worker",nonce:e(this).data("nonce"),id:e(this).data("id")},t)}}),e(document).on("click","#app-settings-section-workers input.action",function(){var t=(e(this).closest("form"),e(".check-column input:checked")),n=e("select",e(this).parent()).val();return 0===t.length?(window.alert(app_i10n.messages.bulk_actions.no_items),!1):"-1"===n?(window.alert(app_i10n.messages.bulk_actions.no_action),!1):!!window.confirm(app_i10n.messages.workers.delete_confirmation)&&void 0})})},function(e,t,n){n(0),e.exports=n(1)}]);
 //# sourceMappingURL=admin-settings.js.map
